# CMakeDraco

./: CMakeLists.txt  GenerateProjectFiles.bat  README.md
DRACO/: CMakeLists.txt  DRACO.cpp  DRACO.rc  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
